README file udpates

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href= "./assets/style.css"/>
+    <title>Quiz</title>
+</head>
 
+<body>
+    <main>
+        <h1>WELCOME TO THE QUIZ</h1>
+        <h2>You Are Going To Be Tested On Your Knowledge Of Javascript Fundamentals</h2>
+        <p>This will be timed. The questions will appear and you will have 30 seconds to answer.</p>
+        <h3>Good Luck!</h3>
+        
+        
+        <div id="quiz"></div>
+        <!-- Create a Start button -->
+        <button class="start-button">Start</button>
+
+        <!-- Submit -->
+        <!-- <button id="submit">Get Results</button> -->
+        <div id="results"></div>
+    </main>
+
+    <section>
+        <!-- HOW TO MOVE IT TO THE NEXT PAGE -->
+        </div>
+            <div class= "card timer">
+            <div class = "timer-text">
+            <div class="large-font timer-count">30</div>
+            <h3>seconds remaining</h3>
+        </div>
+
+        <!-- How to add this to the quiz instead of main -->
+        <!-- <input id="view-scores" type="button" value="View Scores"> -->
+    </section>
+
+    <script src = "assets/script.js"></script>
+
+</body>
+</html>
