--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <h2 id = "question"></h2>
         <div id="quiz">
             <button class="start"> Start </button>
-            <p id="choice1" onclick="checkAnswer('choice1')"></p>
-            <p id="choice2" onclick="checkAnswer('choice2')"></p>
-            <p id="choice3" onclick="checkAnswer('choice3')"></p>
-            <p id="choice4" onclick="checkAnswer('choice4')"></p>
+            <button id="choice1" onclick="checkAnswer('choice1')"></button><br>
+            <button id="choice2" onclick="checkAnswer('choice2')"></button><br>
+            <button id="choice3" onclick="checkAnswer('choice3')"></button><br>
+            <button id="choice4" onclick="checkAnswer('choice4')"></button><br>
             </div>
 
     </div>
